# pop-os-setup

./: .federation_trace.jsonl  .gitignore  AGENTS.md  AGENTS_FUNCTIONS.md  ATOM-META-RL-018.md  ATOM-META-RL-019.md  ATOM-META-RL-020-DETERMINISM-FULL-AUDIT.md  ATOM-META-RL-021-ALIGNMENT-DETERMINISM-FULL-AUDIT.md  ATOM-META-RL-022-PRODUCTION-FINALIZATION.md  ATOM-META-RL-023-FORMAL-VERIFICATION.md  ATTESTATION_BUNDLE_v10.0.json  ATTESTATION_BUNDLE_v4.0.json  ATTESTATION_BUNDLE_v9.0.json  CHANGELOG.md  CONSOLIDATION_PLAN.md  CONTROL_LOOP_ARCHITECTURE.md  DETERMINISM_FIX_PLAN.md  DRILL_velero-restore-test.sh  PRODUCTION_HARDENING.md  PRODUCTION_READINESS_AUDIT.md  Pop_OS_AI_Dev_Setup.sh  Pop_OS_KDE_NVIDIA_Guide.md  README.md  RELEASE_NOTES.md  REPOSITORY_AUDIT_mahaasur13-sys_2026-04-18.md  SLSA_ATTESTATION_BUNDLE_v4.1.json  SLSA_HARDEN_BUNDLE_v4.2.json  SLSA_RELEASE_BUNDLE_v4.3.json  SLSA_RELEASE_BUNDLE_v4.5.json  SPEC.md  a  alignme  at  atom-fed  atomo  audit_v3.py  build_push.sh  c  causality_graph.json  ci_production_hardening.patch  (+50 more)
agents/: pyproject.toml
agents/atomos_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
atomos_pkg/: pyproject.toml
atomos_pkg/atomos.egg-info/: PKG-INFO  SOURCES.txt
atomos_pkg/atomos/bridge/: __init__.py  agents_adapter.py  policy_bridge.py  sbs_adapter.py
atomos_pkg/atomos/core/: execution_loop.py
atomos_pkg/atomos/drl/: __init__.py  clock.py  failures.py  gateway.py  message.py  partition.py  test_drl.py  transport.py
atomos_pkg/atomos/runtime/: admission_control.py  async_execution.py  audit_v4.py  ccl_v1.py  chaos_engine.py  consistency_engine.py  distributed_scheduler.py  execution_mesh.py  identity.py  linear_os_kernel.py  linear_os_kernel_part2.py  linear_os_kernel_part3.py  linear_os_kernel_part4.py  linear_os_kernel_part5.py  observability.py  preemption.py  raft_hardener.py  replicated_event_store.py  rpc_mesh.py  scheduler.py  signed_rpc.py
atomos_pkg/atomos/uesl/: __init__.py  adapter.py  bootstrap.py  engine.py  semtypes.py  statestore.py  test_uesl.py
unified-platform/: .ansible-lint.yml  .env.example  .gitignore  CI_CD_SETUP.md  FINAL_ENHANCEMENTS.md  FINAL_STEPS.md  MERGE_REPORT.md  Makefile  README.md  RELEASE_GATE_REPORT.md  RELEASE_NOTES.md  coverage.xml  pyproject.toml
unified-platform/.github/: SELF_HOSTED_RUNNER.md
unified-platform/.github/workflows/: ci.yml  promote.yml  rollback.yml  security.yml
unified-platform/acos/: __init__.py  acos_cli.py  scl.py  scl_v5.py  scl_v6.py  utils.py
unified-platform/acos/cli/: __init__.py  monitor.py
unified-platform/acos/contracts/: engine_contract.py  scheduler_contract.py  trace_contract.py
unified-platform/acos/events/: event.py  event_log.py  types.py
unified-platform/acos/eventsourced/: engine.py
unified-platform/control-plane/: README.md  __init__.py  acos_gateway.py  audit_logger.py  execution_router.py  policy_engine.py  scheduler.py
unified-platform/control_plane/: acos_gateway.py  audit_logger.py  execution_router.py  policy_engine.py  scheduler.py
unified-platform/core/: acos.py  governance.py
unified-platform/docs/: ARCHITECTURE.md  SSH_SETUP.md  architecture.md  ceph.md  cluster-integration.md  inference_api.md  mikrotik-setup.md  network.md  ray.md  setup_ssh.sh  slurm-ha.md  troubleshooting.md
unified-platform/observability/: alertmanager.yml  docker-compose.yml
unified-platform/scripts/: pre-push-validate.sh
unified-platform/systemd/: acos-tunnel-monitor.service  tunnel_monitor.py
unified-platform/tests/: acos_isolation.py  conftest.py  test_amneziawg_integration.py  test_control_plane.py  test_ml_api.py  test_security_fixes.py  test_validation_gate.py
unified-platform/validation/: __init__.py  anomaly_detector.py  enforcement_kernel.py  postflight_validator.py  preflight_gate.py  runtime_monitor.py  validation_gate.py
(+867 files in other folders)
